--- a/New Unity Project/Assembly-CSharp-Editor-firstpass.csproj
+++ b/New Unity Project/Assembly-CSharp-Editor-firstpass.csproj
@@ -175,8 +175,12 @@
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
  </Reference>
  <Reference Include="AdvancedInspector">
- <HintPath>C:/Users/pokef/Desktop/Locket Quest Unmasked/New Unity Project/Assets/Plugins/Editor/AdvancedInspector/AdvancedInspector.dll</HintPath>
+ <HintPath>C:/Users/pokef/Desktop/TeamAwkward/locketquest/New Unity Project/Assets/Plugins/Editor/AdvancedInspector/AdvancedInspector.dll</HintPath>
  </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{79391AC5-8752-B4CC-F33F-BB9EB1094377}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
