--- a/New Unity Project/Assembly-CSharp-Editor.csproj
+++ b/New Unity Project/Assembly-CSharp-Editor.csproj
@@ -140,8 +140,16 @@
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
  </Reference>
  <Reference Include="AdvancedInspector">
- <HintPath>C:/Users/pokef/Desktop/Locket Quest Unmasked/New Unity Project/Assets/Plugins/Editor/AdvancedInspector/AdvancedInspector.dll</HintPath>
+ <HintPath>C:/Users/pokef/Desktop/TeamAwkward/locketquest/New Unity Project/Assets/Plugins/Editor/AdvancedInspector/AdvancedInspector.dll</HintPath>
  </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{79391AC5-8752-B4CC-F33F-BB9EB1094377}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp.csproj">
+      <Project>{B2B58FB2-4462-6B0C-A872-40DD957E5FE0}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp-Editor-firstpass.csproj">
+      <Project>{A0590241-EC89-9436-F11D-51760213F2B6}</Project>      <Name>Assembly-CSharp-Editor-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
